crates/nuff_linter/src/diagnostic/render/snapshots/nuff_linter__diagnostic__render__json__tests__output.snap
---
source: crates/nuff_linter/src/diagnostic/render/json.rs
expression: env.render_diagnostics(&diagnostics)
---
[
  {
    "cell": null,
    "code": "F401",
    "end_location": {
      "column": 10,
      "row": 1
    },
    "filename": "/fib.py",
    "fix": {
      "applicability": "unsafe",
      "edits": [
        {
          "content": "",
          "end_location": {
            "column": 1,
            "row": 2
          },
          "location": {
            "column": 1,
            "row": 1
          }
        }
      ],
      "message": "Remove unused import: `os`"
    },
    "location": {
      "column": 8,
      "row": 1
    },
    "message": "`os` imported but unused",
    "name": "unused-import",
    "noqa_row": 1,
    "severity": "error",
    "url": "https://example.com/rules/unused-import"
  },
  {
    "cell": null,
    "code": "F841",
    "end_location": {
      "column": 6,
      "row": 6
    },
    "filename": "/fib.py",
    "fix": {
      "applicability": "unsafe",
      "edits": [
        {
          "content": "",
          "end_location": {
            "column": 10,
            "row": 6
          },
          "location": {
            "column": 5,
            "row": 6
          }
        }
      ],
      "message": "Remove assignment to unused variable `x`"
    },
    "location": {
      "column": 5,
      "row": 6
    },
    "message": "Local variable `x` is assigned to but never used",
    "name": "unused-variable",
    "noqa_row": 6,
    "severity": "error",
    "url": "https://example.com/rules/unused-variable"
  },
  {
    "cell": null,
    "code": "F821",
    "end_location": {
      "column": 5,
      "row": 1
    },
    "filename": "/undef.py",
    "fix": null,
    "location": {
      "column": 4,
      "row": 1
    },
    "message": "Undefined name `a`",
    "name": "undefined-name",
    "noqa_row": 1,
    "severity": "error",
    "url": "https://example.com/rules/undefined-name"
  },
  {
    "cell": null,
    "code": "F821",
    "end_location": {
      "column": 26,
      "row": 12
    },
    "filename": "/fib.py",
    "fix": null,
    "location": {
      "column": 16,
      "row": 12
    },
    "message": "Undefined name `fibonaccii`",
    "name": "undefined-name",
    "noqa_row": 1,
    "severity": "error",
    "url": "https://example.com/rules/undefined-name"
  }
]
