crates/nuff_linter/src/diagnostic/render/snapshots/nuff_linter__diagnostic__render__json__tests__syntax_errors.snap
---
source: crates/nuff_db/src/diagnostic/render/json.rs
expression: env.render_diagnostics(&diagnostics)
---
[
  {
    "cell": null,
    "code": "invalid-syntax",
    "end_location": {
      "column": 1,
      "row": 2
    },
    "filename": "/syntax_errors.py",
    "fix": null,
    "location": {
      "column": 15,
      "row": 1
    },
    "message": "Expected one or more symbol names after import",
    "name": "invalid-syntax",
    "noqa_row": null,
    "severity": "error",
    "url": null
  },
  {
    "cell": null,
    "code": "invalid-syntax",
    "end_location": {
      "column": 1,
      "row": 4
    },
    "filename": "/syntax_errors.py",
    "fix": null,
    "location": {
      "column": 12,
      "row": 3
    },
    "message": "Expected ')', found newline",
    "name": "invalid-syntax",
    "noqa_row": null,
    "severity": "error",
    "url": null
  }
]
